# edhrec-affinity

./: .gitignore  InspectCommanderPage.py  InspectSitemap.py  README.md  pyproject.toml
.github/workflows/: deploy-frontend.yml  update-data-and-deploy-compact.yml  update-data-and-deploy-full.yml  update-data-and-deploy.yml
docs/: data_source_validation.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CommanderCard.jsx  CommanderImageGallery.jsx  DataTable.jsx  ErrorState.jsx  Layout.jsx  LoadingState.jsx  SimpleTable.jsx  SmallBarChart.jsx  StatCard.jsx  TableFilters.jsx  TagSummaryCard.jsx  TrendBadge.jsx
frontend/src/lib/: api.js  commanderUtils.js  filterUtils.js  formatters.js  persistentState.js  setUtils.js  tableColumns.js  tableUtils.js  trendUtils.js
frontend/src/pages/: CommanderDetailPage.jsx  CommanderSearchPage.jsx  GlobalLeaderboardPage.jsx  HomePage.jsx  MethodologyPage.jsx  NotFoundPage.jsx  SetExplorerPage.jsx  (+1 more)
scripts/: check_latest_data.py  copy_latest_data.py  download_site_data.py  export_compact_site_data.py  export_full_site_data.py  use_previous_processed_if_empty.py
src/edhrec_affinity/: analysis.py  cedh_scraper.py  cleaning.py  discovery.py  models.py  scryfall_enrichment.py  single_commander.py  tag_scraper.py  trends.py
src/edhrec_affinity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_cedh_scraper.py  test_cleaning.py  test_discovery.py  test_export_full_site_data.py  test_single_commander.py  test_tag_scraper.py  test_trends.py  test_use_previous_processed_if_empty.py
